[tool.poetry]
name = "Cosmic's Live Follower Count"
version = "2.3.3"
description = ""
authors = ["Cosmic <jaden@cosmic.tk>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
Flask = "^2.1.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

